clusters/home/apps/mediabox/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: null
  labels:
    app: "mediabox"
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    release: jellyfin
  name: jellyfin
  namespace: mediabox
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "mediabox"
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
        pod.lifecycle: permanent
        pod.name: main
        release: jellyfin
      namespace: mediabox
    spec:
      automountServiceAccountToken: false
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin:10.9.6.20240606-184155
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 12
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 7359
          name: autodiscovery
          protocol: UDP
        - containerPort: 8096
          name: main
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 12
          successThreshold: 2
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: true
          readOnlyRootFilesystem: false
          runAsGroup: 568
          runAsNonRoot: true
          runAsUser: 568
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /cache
          name: cache
        - mountPath: /config
          name: config
        - mountPath: /dev/shm
          name: devshm
        - mountPath: /shared
          name: shared
        - mountPath: /tmp
          name: tmp
        - mountPath: /config/transcodes
          name: transcode
        - mountPath: /var/logs
          name: varlogs
        - mountPath: /var/run
          name: varrun
        - name: devdri
          mountPath: /dev/dri
        - name: media
          mountPath: /mnt/movies
          subPath: movies
        - name: media
          mountPath: /mnt/tv
          subPath: tv
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
        - 568
        - 109
      serviceAccount: default
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/instance: jellyfin
            app.kubernetes.io/name: jellyfin
            pod.name: main
        maxSkew: 1
        nodeAffinityPolicy: Honor
        nodeTaintsPolicy: Honor
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - name: cache
        emptyDir: {}
      - name: config
        persistentVolumeClaim:
          claimName: pvc-jellyfin-config
      - name: devshm
        emptyDir:
          medium: Memory
          sizeLimit: 8Gi
      - name: shared
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 8Gi
      - name: transcode
      - name: varlogs
        emptyDir:
          medium: Memory
          sizeLimit: 8Gi
      - name: varrun
        emptyDir:
          medium: Memory
          sizeLimit: 8Gi
      - name: devdri
        hostPath:
          type: Directory
          path: /dev/dri
      - name: media
        nfs:
          path: /mnt/storage0/media
          server: sunbeam.layertwo.lan
