clusters/home/apps/mediabox/jellyfin/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: mediabox
  annotations:
    external-dns.kubernetes.io/hostname: "jellyfin.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.layertwo.dev`)
    kind: Rule
    services:
    - name: jellyfin-main
      port: 8096
    middlewares:
      - name: default-headers-mediabox
